--- a/FE/src/app/features/booking/components/booking-detail/booking-detail.component.html
+++ b/FE/src/app/features/booking/components/booking-detail/booking-detail.component.html
@@ -43,7 +43,7 @@
               [disabled]="
                 bookingDetail.status !== 'Pending' && data.status !== 'Pending'
               "
-              class="btn btn-outline-dark btn-sm btn-rounded"
+              class="btn btn-dark btn-sm btn-rounded"
               (click)="onCancel(bookingDetail.id, bookingDetail.status!)"
             >
               Hủy
