--- a/FE/src/app/features/booking/components/invoice/invoice.component.html
+++ b/FE/src/app/features/booking/components/invoice/invoice.component.html
@@ -94,7 +94,9 @@
           </div>
         </div>
         <hr />
-        <button type="button" class="btn btn-dark w-100">Thanh toán</button>
+        <button type="button" (click)="onPayment()" class="btn btn-dark w-100">
+          Thanh toán
+        </button>
       </div>
     </div>
   </div>
