--- a/FE/src/app/features/profiles/pages/profile/profile.component.html
+++ b/FE/src/app/features/profiles/pages/profile/profile.component.html
@@ -62,7 +62,7 @@
                 <li class="mb-2">
                   <a
                     matRipple
-                    routerLink="/profile/history"
+                    routerLink="/profile/booking"
                     class="sidebar-menu w-100 text-dark d-flex align-items-center py-2 px-4"
                     routerLinkActive="active"
                   >
