--- a/FE/src/app/features/booking/components/booking-list/booking-list.component.html
+++ b/FE/src/app/features/booking/components/booking-list/booking-list.component.html
@@ -30,21 +30,27 @@
 
         <!-- Status payment Column-->
         <ng-container matColumnDef="paymentStatus">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Trạng thái thanh toán
-          </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Thanh toán</th>
           <td mat-cell *matCellDef="let element">
-            {{ statusInvoiceFilter[element.invoice?.status || ""] }}
+            {{ statusInvoiceFilter[element.invoice?.status!] }}
           </td>
         </ng-container>
 
         <!-- Status Lease Column-->
         <ng-container matColumnDef="leaseStatus">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Trạng thái hợp đồng
-          </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Hợp đồng</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.leaseStatus }}
+            @if(element.lease && element.lease?.status === "Pending"){
+            <button
+              type="button"
+              class="btn btn-dark btn-sm btn-rounded my-1"
+              (click)="onLease(element, element.status)"
+            >
+              Xem hợp đồng
+            </button>
+            }@else {
+            {{ statusLeaseFilter[element.lease?.status] }}
+            }
           </td>
         </ng-container>
 
@@ -62,7 +68,7 @@
           <td mat-cell *matCellDef="let element">
             <button
               type="button"
-              class="btn btn-outline-dark btn-sm btn-rounded m-1"
+              class="btn btn-dark btn-sm btn-rounded my-1"
               (click)="onDetail(element)"
             >
               Xem chi tiết
@@ -89,10 +95,6 @@
               >
                 <i class="fa-solid fa-ban"></i>
                 <span>Hủy đơn</span>
-              </button>
-              <button (click)="onPayment(element)" mat-menu-item>
-                <i class="fa-brands fa-cc-amazon-pay"></i>
-                <span>Thanh toán</span>
               </button>
             </mat-menu>
           </td>
