--- a/FE/src/app/features/booking/components/invoice/invoice.component.html
+++ b/FE/src/app/features/booking/components/invoice/invoice.component.html
@@ -43,7 +43,7 @@
             <ul class="list-unstyled">
               <li class="text-muted">
                 <span class="fw-bold">Ngày tạo: </span>
-                {{ data.createdAt | date : "dd/MM/yyyy" }}
+                {{ data.invoice?.createdAt| date : "dd/MM/yyyy" }}
               </li>
               <li class="text-muted">
                 <span class="fw-bold">Thời hạn còn: </span>
