--- a/FE/src/app/features/management/lessor/pages/lessor-management/lessor-management.component.html
+++ b/FE/src/app/features/management/lessor/pages/lessor-management/lessor-management.component.html
@@ -66,7 +66,7 @@
                   class="sidebar-menu w-100 text-dark d-flex align-items-center py-2 px-4"
                   routerLinkActive="active"
                 >
-                  <i class="fa-solid fa-clock-rotate-left"></i>
+                  <i class="fa-solid fa-basket-shopping"></i>
                   <span>Quản lý đặt phòng</span>
                 </a>
               </li>
