--- a/FE/src/app/core/layout/menu/menu.component.html
+++ b/FE/src/app/core/layout/menu/menu.component.html
@@ -28,8 +28,8 @@
         <button mat-menu-item routerLink="/profile/booking">
           Lịch sử đặt phòng
         </button>
-        <button mat-menu-item routerLink="/profile/maintenance">
-          Trạng thái yêu cầu
+        <button mat-menu-item routerLink="/profile/rented-apartment">
+          Phòng của tôi
         </button>
         <button mat-menu-item routerLink="/profile/actions">Hoạt động</button>
       </div>
