--- a/FE/src/app/features/Cart/components/cart-item/cart-item.component.html
+++ b/FE/src/app/features/Cart/components/cart-item/cart-item.component.html
@@ -36,6 +36,7 @@
             />
             <span>Tháng</span>
           </p>
+          <p class="mb-0 lead fw-normal">Từ ngày {{ cartDetail?.startDate | date : "dd/MM/yyyy" }}</p>
         </div>
       </div>
       <div class="col-md-2 d-flex justify-content-center">
