--- a/FE/src/app/features/booking/components/booking-detail/booking-detail.component.html
+++ b/FE/src/app/features/booking/components/booking-detail/booking-detail.component.html
@@ -14,6 +14,7 @@
         <tr>
           <th>Phòng</th>
           <th>Số nguời</th>
+          <th>Ngày bắt đầu</th>
           <th>Số tháng</th>
           <th>Giá</th>
           <th>Trạng thái</th>
@@ -28,6 +29,7 @@
             <p class="text-muted mb-0">{{ bookingDetail.room?.address }}</p>
           </td>
           <td>{{ bookingDetail.numberOfTenant }}</td>
+          <td>{{ bookingDetail.startDate | date : "dd/MM/yyyy" }}</td>
           <td>{{ bookingDetail.numberOfMonth }}</td>
           <td>
             {{ bookingDetail.price | currency : "VND" : "symbol" : "1.0-0" }}
