--- a/FE/src/app/features/management/lessor/pages/lessor-reservation/lessor-reservation.component.html
+++ b/FE/src/app/features/management/lessor/pages/lessor-reservation/lessor-reservation.component.html
@@ -89,7 +89,12 @@
               <button
                 [disabled]="element.status !== 'Pending'"
                 (click)="
-                  onAccept(element.id, element.status, element.room?.condition)
+                  onAccept(
+                    element.id,
+                    element.status,
+                    element.room?.condition,
+                    element.reservationDate
+                  )
                 "
                 mat-menu-item
               >
