--- a/FE/src/app/features/profiles/pages/profile/profile.component.html
+++ b/FE/src/app/features/profiles/pages/profile/profile.component.html
@@ -73,12 +73,12 @@
                 <li class="mb-2">
                   <a
                     matRipple
-                    routerLink="/profile/maintenance"
+                    routerLink="/profile/rented-apartment"
                     class="sidebar-menu w-100 text-dark d-flex align-items-center py-2 px-4"
                     routerLinkActive="active"
                   >
-                    <i class="fa-solid fa-screwdriver-wrench"></i>
-                    <span>Trạng thái yêu cầu</span>
+                    <i class="fa-solid fa-house-user"></i>
+                    <span>Phòng của tôi</span>
                   </a>
                 </li>
                 <li class="mb-2">
