--- a/FE/src/app/features/booking/components/booking-list/booking-list.component.html
+++ b/FE/src/app/features/booking/components/booking-list/booking-list.component.html
@@ -40,17 +40,7 @@
         <ng-container matColumnDef="leaseStatus">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Hợp đồng</th>
           <td mat-cell *matCellDef="let element">
-            @if(element.lease && element.lease?.status === "Pending"){
-            <button
-              type="button"
-              class="btn btn-dark btn-sm btn-rounded my-1"
-              (click)="onLease(element, element.status)"
-            >
-              Xem hợp đồng
-            </button>
-            }@else {
             {{ statusLeaseFilter[element.lease?.status] }}
-            }
           </td>
         </ng-container>
 
@@ -95,6 +85,14 @@
               >
                 <i class="fa-solid fa-ban"></i>
                 <span>Hủy đơn</span>
+              </button>
+              <button
+                (click)="onLease(element)"
+                [disabled]="element.status !== 'Confirmed'"
+                mat-menu-item
+              >
+                <i class="fa-solid fa-file-lines"></i>
+                <span>Hợp đồng</span>
               </button>
             </mat-menu>
           </td>
