--- a/FE/src/app/features/booking/components/lease-view/lease-view.component.html
+++ b/FE/src/app/features/booking/components/lease-view/lease-view.component.html
@@ -26,24 +26,16 @@
             <ul class="list-unstyled">
               <li class="text-muted">
                 Người cho thuê:
-                <span class="text-info-emphasis">{{
-                  data.lease?.lessor
-                }}</span>
+                <span class="text-info-emphasis">{{ data.lease?.lessor }}</span>
               </li>
               <li class="text-muted">
                 Người thuê:
-                <span class="text-info-emphasis">{{
-                  data.lease?.lessee
-                }}</span>
+                <span class="text-info-emphasis">{{ data.lease?.lessee }}</span>
               </li>
             </ul>
           </div>
           <div class="col-xl-4">
             <ul class="list-unstyled">
-              <li class="text-muted">
-                <span class="fw-bold">Ngày bắt đầu: </span>
-                {{ data.lease?.startDate | date : "dd/MM/yyyy" }}
-              </li>
               <li class="text-muted">
                 <span class="me-1 fw-bold">Trạng thái: </span
                 ><span class="badge bg-warning text-black fw-bold">
@@ -59,8 +51,9 @@
               <tr>
                 <th scope="col">#</th>
                 <th scope="col">Phòng</th>
+                <th scope="col">Ngày bắt đầu</th>
+                <th scope="col">Ngày kết thúc</th>
                 <th scope="col">Số nguời</th>
-                <th scope="col">Số tháng</th>
                 <th scope="col">Giá</th>
               </tr>
             </thead>
@@ -69,8 +62,9 @@
               <tr>
                 <th scope="row">{{ $index }}</th>
                 <td>{{ leaseDetail.room?.name }}</td>
+                <td>{{ leaseDetail.startDate | date : "dd/MM/yyyy" }}</td>
+                <td>{{ leaseDetail.endDate | date : "dd/MM/yyyy" }}</td>
                 <td>{{ leaseDetail.numberOfTenant }}</td>
-                <td>{{ leaseDetail.numberOfMonth }}</td>
                 <td>
                   {{
                     leaseDetail.price | currency : "VND" : "symbol" : "1.0-0"
@@ -97,10 +91,18 @@
         </div>
       </div>
       <div class="d-flex gap-2 mt-4">
-        <button class="btn btn-danger flex-fill" (click)="onReject()">
+        <button
+          [disabled]="data.invoice?.status !== 'Pending'"
+          class="btn btn-danger flex-fill"
+          (click)="onReject()"
+        >
           Từ chối
         </button>
-        <button class="btn btn-success flex-fill" (click)="onAccept()">
+        <button
+          [disabled]="data.invoice?.status !== 'Pending'"
+          class="btn btn-success flex-fill"
+          (click)="onAccept()"
+        >
           Xác nhận
         </button>
       </div>
