--- a/FE/src/app/core/layout/menu/menu.component.html
+++ b/FE/src/app/core/layout/menu/menu.component.html
@@ -8,6 +8,10 @@
   >
     <i class="fa-solid fa-cart-arrow-down"></i>
   </button>
+  
+  <button class="btn btn-dark fs-4 border-0 rounded-pill" (click)="onMessage()">
+    <i class="fa-solid fa-envelope"></i>
+  </button>
   <button class="btn btn-dark fs-4 border-0 rounded-pill">
     <i class="bi bi-bell-fill"></i>
   </button>
