--- a/FE/src/app/core/layout/header/header.component.html
+++ b/FE/src/app/core/layout/header/header.component.html
@@ -24,6 +24,11 @@
         </li>
         <li><a routerLink="/service" routerLinkActive="active">Dịch vụ</a></li>
         <li><a routerLink="/contact" routerLinkActive="active">Liên hệ</a></li>
+        <select>
+            <option class="d-none" value="">Khách hàng</option>
+            <option value="">Phòng trọ</option>
+            <option value="">Phòng trọ</option>
+        </select>
       </ul>
       <div class="btn-navmenu d-flex gap-2">
         <div *appIfAuthenticated="true">
